NIFI-16195 Wrote part headers into attributes